# TimeAccumulator_windows

./: .gitignore  CMakeLists.txt  README.md  language.h  liveApplication.cpp  main.cpp
src/: fileSystem.cpp  fileSystem.h  intermediateSystem.h  language.h  liveApplication.h  main.cpp
